[gd_scene load_steps=2 format=3 uid="uid://cm7nsd4lbstva"]

[ext_resource type="Script" path="res://cell.gd" id="1_gkkr5"]

[node name="Cell" type="Node2D"]
script = ExtResource("1_gkkr5")

[node name="DecreaseButton" type="Button" parent="."]
offset_right = 20.0
offset_bottom = 31.0
text = "-"

[node name="ValueLabel" type="Label" parent="."]
offset_left = 20.0
offset_right = 64.0
offset_bottom = 31.0
text = "1234"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IncreaseButton" type="Button" parent="."]
offset_left = 64.0
offset_right = 84.0
offset_bottom = 31.0
text = "+"

[connection signal="pressed" from="DecreaseButton" to="." method="_on_decrease_button_pressed"]
[connection signal="pressed" from="IncreaseButton" to="." method="_on_increase_button_pressed"]
